--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "type": "git",
     "url": "git+https://github.com/AbuchiKings/"
   },
-  "keywords": [
-  ],
+  "keywords": [],
   "author": "Abuchi Ndinigwe",
   "license": "MIT",
   "bugs": {
@@ -30,7 +29,7 @@
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-plugin-import": "^2.22.0",
-    "mocha": "^8.0.1",
+    "mocha": "^8.1.3",
     "nodemon": "^1.19.4",
     "nyc": "^14.1.1"
   },
@@ -42,14 +41,14 @@
     "express": "^4.17.1",
     "express-mongo-sanitize": "^2.0.0",
     "express-rate-limit": "^5.1.3",
-    "express-validator": "^6.6.0",
+    "express-validator": "^6.6.1",
     "helmet": "^3.23.3",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
-    "pg": "^8.3.0",
+    "pg": "^8.3.3",
     "utf-8-validate": "^5.0.2",
     "validator": "^13.1.1",
-    "xlsx": "^0.16.4",
+    "xlsx": "^0.16.6",
     "xss-clean": "^0.1.1"
   }
 }
