--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "db": "node ./server/database/db.js",
-    "start": "npm run db && node server/app.js",
+    "start": "npm run db && node ./server/app.js",
     "dev": "nodemon ./server/app.js"
   },
   "repository": {
